...
        case mileage, date, time
    }
    
    var body: some View {
        NavigationView {
            formContent
                .navigationTitle("Start Shift")
                .navigationBarTitleDisplayMode(.inline)
                .toolbar {
                    ToolbarItem(placement: .navigationBarLeading) {
                        Button("Cancel") {
                            presentationMode.wrappedValue.dismiss()
                        }
                    }
                    ToolbarItem(placement: .navigationBarTrailing) {
                        Button("Start") {
                            startShift()
                        }
                        .disabled(startMileage == nil)
                        .accessibilityIdentifier("confirm_start_shift_button")
                    }
                    ToolbarItemGroup(placement: .keyboard) {
                        Spacer()
                        Button("Done") {
                            hideKeyboard()
                        }
...
